--- a/index.html
+++ b/index.html
@@ -14,28 +14,29 @@
 <script src=         "text-demo.js" ></script></head>
 <body style="background: DarkGray">       <!-- Begin typing your web page here. //-->
 
+
+
+
+<script type=module>
+alert("dfdsafadsfasdf");
+   import test from './modules-test.mjs';
+//   test();
+</script>
+
                               <!-- The following code embeds a WebGL canvas panel widget with certain scenes and their controls. //-->
 <div id="main-canvas" class="canvas-widget"></div>
 <script> "use strict"     // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
                                            // Use this code to embed a widget into any web page.  The widget inclues a 3D WebGL area
                                            // (an HTML canvas) and various panels of controls.
-  const scenes = [// "Shadow_Mapping_Test",
-              //    "Inertia_Demo",
-                  "Axes_Viewer_Test_Scene"
-                 //  "Text_Demo"
-
-                  ];
-
-import test from './modules-test.mjs';
-test();
+  const scenes = [ "Axes_Viewer_Test_Scene" ];
                  
   new Canvas_Widget( "main-canvas", scenes );             // Use the Canvas_Widget class to display the WebGL demo.  Pass in
                                                           // the name of the HTML element we are to replace with the widget.
 </script>
-                             <!-- The following code embeds a code navigator widget with links to classes. //-->
-<!-- <div id="main-code" class="code-widget"></div>
+                             <!-- The following code embeds a code navigator widget with links to classes. //-->                             
+<div id="main-code" class="code-widget"></div>
 <script> "use strict"
   new Code_Widget( "main-code", "Axes_Viewer_Test_Scene" );
-</script> -->
+</script>
 
 </body></html>
