--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 
 
 <script type=module>
-alert("dfdsafadsfasdf");
-   import test from './modules-test.mjs';
-//   test();
+   import * as classes from './modules-test.js';
+   new classes.Test();
 </script>
 
                               <!-- The following code embeds a WebGL canvas panel widget with certain scenes and their controls. //-->
