--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 <script src=      "main-scene.js" ></script></head>
 <body style="background: DarkGray">       <!-- Begin typing your web page here. //-->
 
+
+<script type=module>
+   import * as classes from './modules-test.js';
+   new classes.Test();
+</script>
+
+
                               <!-- The following code embeds a WebGL canvas panel widget with certain scenes and their controls. //-->
 <div id="main-canvas" class="canvas-widget"></div>
 <script> "use strict"     // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
