--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 <body style="background: DarkGray">       <!-- Begin typing your web page here. //-->
 
 
+
+<div id="main-code" class="code-widget"></div>
 <script type=module>
-   import * as classes from './modules-test.js';
+   import * as classes from './main-scene.js';
+   new Code_Widget( "main-code", "Shadow_Mapping_Test" );
    new classes.Test();
 </script>
 
-
                               <!-- The following code embeds a WebGL canvas panel widget with certain scenes and their controls. //-->
-<div id="main-canvas" class="canvas-widget"></div>
+<!-- <div id="main-canvas" class="canvas-widget"></div>
 <script> "use strict"     // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
                                            // Use this code to embed a widget into any web page.  The widget inclues a 3D WebGL area
                                            // (an HTML canvas) and various panels of controls.
@@ -34,11 +36,11 @@
                   ]
   new Canvas_Widget( "main-canvas", scenes );             // Use the Canvas_Widget class to display the WebGL demo.  Pass in
                                                           // the name of the HTML element we are to replace with the widget.
-</script>
+</script> -->
                              <!-- The following code embeds a code navigator widget with links to classes. //-->
-<div id="main-code" class="code-widget"></div>
+<!-- <div id="main-code" class="code-widget"></div>
 <script> "use strict"
   new Code_Widget( "main-code", "Shadow_Mapping_Test" );
-</script>
+</script> -->
 
 </body></html>
