--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
          </script>          
                                       <!--  Javascript "include" files.  Any code in them gets executed as part of the page loading: //-->
 <script src=     "tiny-graphics.js" ></script>
+<script src="minimal-webgl-demo.js" ></script>
 <script src=            "common.js" ></script>
 <script src="transforms-sandbox.js" ></script>
 <script src=   "collisions-demo.js" ></script>
@@ -19,7 +20,7 @@
 <script> "use strict"     // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
                                            // Use this code to embed a widget into any web page.  The widget inclues a 3D WebGL area
                                            // (an HTML canvas) and various panels of controls.
-  const scenes = [ "Text_Demo", "Movement_Controls", "Global_Info_Table" ]
+  const scenes = [ "Minimal_Webgl_Demo" ]
   new Canvas_Widget( "main-canvas", scenes );             // Use the Canvas_Widget class to display the WebGL demo.  Pass in
                                                           // the name of the HTML element we are to replace with the widget.
 </script>
