"tangents" now affected by insert with transform
If an attribute is called "tangents" it will be treated like "positions" in Shape.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script> "use strict"     // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
                                            // Use this code to embed a widget into any web page.  The widget inclues a 3D WebGL area
                                            // (an HTML canvas) and various panels of controls.
-  const scenes = [ "Text_Demo" ]
+  const scenes = [ "Shadow_Mapping_Test" ]
   new Canvas_Widget( "main-canvas", scenes );             // Use the Canvas_Widget class to display the WebGL demo.  Pass in
                                                           // the name of the HTML element we are to replace with the widget.
 </script>
