--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 // Do the following when you're working with a codebase that is divided into separate files instead of all in dependencies.js.
 const scenes = { 
         //                   Axes_Viewer_Test_Scene: "./axes-viewer.js",            // Indicate the scenes that you want, and what files to find them in.
+                                  Movement_Controls: "./common.js",
         //                             Inertia_Demo: "./collisions-demo.js",
         //                          Collision_Demo: "./collisions-demo.js",
         //                        Many_Lights_Demo: "./many-lights-demo.js",
