--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@ const scenes = {
         //                          Collision_Demo: "./collisions-demo.js",
         //                        Many_Lights_Demo: "./many-lights-demo.js",
         //                      Minimal_Webgl_Demo: "./common.js",
-        //                   Phong_Comparison_Demo: "./minimal-phong.js",
+                           Phong_Comparison_Demo: "./minimal-phong.js",
         //                           Obj_File_Demo: "./obj-file-demo.js",
         //                   Scene_To_Texture_Demo: "./scene-to-texture-demo.js",
         //                               Text_Demo: "./text-demo.js",
         //                      Tutorial_Animation: "./transforms-sandbox.js",
-                              Transforms_Sandbox: "./transforms-sandbox.js",
+        //                      Transforms_Sandbox: "./transforms-sandbox.js",
 
                        };
         const element_to_replace = "main-canvas";       // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area.
