--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
               <!-- The following code embeds a WebGL canvas widget panel, with certain scenes and their panels of controls. //-->
 <div id="main-canvas" class="canvas-widget"></div>
 <script type=module >      // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
-  const element_to_replace = "main-canvas";       // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area.  
+                    // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
+  const element_to_replace = "main-canvas";       
   import { Main_Scene, Additional_Scenes, Canvas_Widget } from './main-scene.js';  // Import the file that defines a scene.
   new Canvas_Widget( element_to_replace, Main_Scene, Additional_Scenes );
 </script>
 
                              <!-- The following code embeds a code navigator widget with links to classes. //-->
 <div id="main-code" class="code-widget"></div>
-<script type=module >      // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
-  const element_to_replace = "main-code";       // Indicate which element on the page you want the Code_Widget to replace with a code readout.
+<script type=module >
+                    // Indicate which element on the page you want the Code_Widget to replace with a code readout:
+  const element_to_replace = "main-code";
   import { Main_Scene, Additional_Scenes, Code_Widget, defs } from './main-scene.js';  // Import the file that defines a scene.
   new Code_Widget( element_to_replace, Main_Scene, Additional_Scenes, defs );
 </script>
