--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <body style="background: DarkGray">       <!-- Begin typing your web page here. //-->
 
 
+              <!-- The following code embeds a text panel, which will extract text out of a Scene object. //-->
+<div id="main-explanation" class="text-widget"></div>
+<script type=module >      // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
+                    // Indicate which element on the page you want the Text_Widget to replace with a textual explanation:
+  const element_to_replace = "main-explanation";       
+  import { Main_Scene, Additional_Scenes, Text_Widget } from './main-scene.js';  // Import the file that defines a scene.
+  new Text_Widget( element_to_replace, Main_Scene );
+</script>
+
 
               <!-- The following code embeds a WebGL canvas widget panel, with certain scenes and their panels of controls. //-->
 <div id="main-canvas" class="canvas-widget"></div>
