--- a/index.html
+++ b/index.html
@@ -3,22 +3,11 @@
 <!DOCTYPE html> <html> <head> <meta charset="UTF-8"/> <link rel="icon" href="assets/fav.ico"> </head>
 <body style="background: DarkGray">       <!-- Begin typing your web page here. //-->
 
-
-              <!-- The following code embeds a text panel, which will extract text out of a Scene object. //-->
-<div id="main-explanation" class="text-widget"></div>
-<script type=module >      // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
-                    // Indicate which element on the page you want the Text_Widget to replace with a textual explanation:
-  const element_to_replace = "main-explanation";       
-  import { Main_Scene, Additional_Scenes, Text_Widget } from './main-scene.js';  // Import the file that defines a scene.
-  new Text_Widget( element_to_replace, Main_Scene );
-</script>
-
-
               <!-- The following code embeds a WebGL canvas widget panel, with certain scenes and their panels of controls. //-->
 <div id="main-canvas" class="canvas-widget"></div>
 <script type=module >      // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
                     // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
-  const element_to_replace = "main-canvas";       
+  const element_to_replace = document.querySelector( "#main-canvas" );
   import { Main_Scene, Additional_Scenes, Canvas_Widget } from './main-scene.js';  // Import the file that defines a scene.
   new Canvas_Widget( element_to_replace, Main_Scene, Additional_Scenes );
 </script>
@@ -27,7 +16,7 @@
 <div id="main-code" class="code-widget"></div>
 <script type=module >
                     // Indicate which element on the page you want the Code_Widget to replace with a code readout:
-  const element_to_replace = "main-code";
+  const element_to_replace = document.querySelector( "#main-code" );
   import { Main_Scene, Additional_Scenes, Code_Widget, defs } from './main-scene.js';  // Import the file that defines a scene.
   new Code_Widget( element_to_replace, Main_Scene, Additional_Scenes, defs );
 </script>
