--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
                     // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
   const element_to_replace = document.querySelector( "#main-canvas" );
   import { Main_Scene, Additional_Scenes, Canvas_Widget } from './main-scene.js';  // Import the file that defines a scene.
-  new Canvas_Widget( element_to_replace, Main_Scene, Additional_Scenes );
+  const scenes = [ Main_Scene, ...Additional_Scenes ].map( scene => new scene() );    // This line creates your scene.
+  new Canvas_Widget( element_to_replace, scenes );
 </script>
 
                              <!-- The following code embeds a code navigator widget with links to classes. //-->
