--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!-- Graphics Example Code.  
-     index.html - The web page document containing the canvas (drawing surface).  It launches your javascript files. //-->
+     index.html - The web page document containing the canvas (drawing surface).  It launches your JavaScript files. //-->
 <!DOCTYPE html> <html> <head> <meta charset="UTF-8"/> <link rel="icon" href="assets/fav.ico"> </head>
 <body style="background: DarkGray">       <!-- Begin typing your web page here. //-->
 
-              <!-- The following code embeds a WebGL canvas widget panel, with certain scenes and their panels of controls. //-->
+      <!-- The following code embeds a WebGL canvas panel, loads certain scene(s), and displays panel(s) of their controls. //-->
 <div id="main-canvas" class="canvas-widget"></div>
 <script type=module >      // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
-                    // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
+                           // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
   const element_to_replace = document.querySelector( "#main-canvas" );
   import { Main_Scene, Additional_Scenes, Canvas_Widget } from './main-scene.js';  // Import the file that defines a scene.
   const scenes = [ Main_Scene, ...Additional_Scenes ].map( scene => new scene() );    // This line creates your scene.
