--- a/index.html
+++ b/index.html
@@ -22,4 +22,13 @@
   new Code_Widget( element_to_replace, Main_Scene, Additional_Scenes, defs );
 </script>
 
+                             <!-- The following code embeds a code editor widget. //-->
+<div id="main-editor" class="editor-widget"></div>
+<script type=module >
+                    // Indicate which element on the page you want the Code_Widget to replace with a code readout:
+  const element_to_replace = document.querySelector( "#main-editor" );
+  import { Main_Scene, Editor_Widget, defs } from './main-scene.js';  // Import the file that defines a scene.
+  new Editor_Widget( element_to_replace, Main_Scene );
+</script>
+
 </body></html>
