--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <script type=module >      // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
                            // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
   const element_to_replace = document.querySelector( "#main-canvas" );
-  import { Main_Scene, Additional_Scenes, Canvas_Widget } from './main-scene.js';  // Import the file that defines a scene.
+  import { Main_Scene, Additional_Scenes, Default_Layout } from './main-scene.js';  // Import the file that defines a scene.
   const scenes = [ Main_Scene, ...Additional_Scenes ].map( scene => new scene() );    // This line creates your scene.
-  new Canvas_Widget( element_to_replace, scenes );
+  new Default_Layout( element_to_replace, scenes );
 </script>
 
 </body></html>
