--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <body style="background: DarkGray">       <!-- Begin typing your web page here. //-->
 
       <!-- The following code embeds a WebGL canvas panel, loads certain scene(s), and displays panel(s) of their controls. //-->
-<div id="main-canvas" class="canvas-widget"></div>
+<div id="main-section" class="document-builder"></div>
 <script type=module >      // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE ********************* 
                            // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
-  const element_to_replace = document.querySelector( "#main-canvas" );
+  const element_to_replace = document.querySelector( "#main-section" );
   import { Main_Scene, Additional_Scenes, Default_Layout } from './main-scene.js';  // Import the file that defines a scene.
   const scenes = [ Main_Scene, ...Additional_Scenes ].map( scene => new scene() );    // This line creates your scene.
   new Default_Layout( element_to_replace, scenes );
