Documentation text areas fixed
Documentation now shows up again.

Main scenes must receive a div as an argument as their component to fill in.  Otherwise no document_region gets made and the div only gets Default_Layout stuff.

Renamed options back to widget_options.

Fixed some render_documentation signatures and minor stuff

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                            // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
   const element_to_replace = document.querySelector( "#main-section" );
   import { main_scene, additional_scenes, Default_Layout } from './main-scene.js';  // Import the file that defines a scene.
-  const root = new main_scene();
+  const root = new main_scene( element_to_replace );
   root.animated_children.push( ...additional_scenes.map( scene => new scene() ) );    // This line creates your scene.
   new Default_Layout( root, element_to_replace );
 </script>
