Eliminate Default_Layout
The root document component (and each document child) now handles their own layout setup.  As well as queuing up the first render call of any canvas.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   const element_to_replace = document.querySelector( "#main-section" );
   import { main_scene, additional_scenes, Default_Layout } from './main-scene.js';  // Import the file that defines a scene.
   const root = new main_scene( element_to_replace );
-  root.state.animated_children.push( ...additional_scenes.map( scene => new scene() ) );    // This line creates your scene.
-  new Default_Layout( root, element_to_replace );
+  root.animated_children.push( ...additional_scenes.map( scene => new scene() ) );    // This line creates your scene.
 </script>
 
 </body></html>
