--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   import { main_scene, additional_scenes, Default_Layout } from './main-scene.js';  // Import the file that defines a scene.
   const root = new main_scene( element_to_replace );
   root.animated_children.push( ...additional_scenes.map( scene => new scene() ) );    // This line creates your scene.
+  root.render_layout( element_to_replace );
 </script>
 
 </body></html>
