Parametric_Surfaces multiple canvases now display again, and sync to a common uniforms.
From previous commits, class WebGL_Manager is eliminated, with functionality moved into Component, which now owns the contexts and uniforms so that those are more accessible from the Component tree.

Components now take "props" in react fashion to pass initialization through the component tree.  Local uniforms of a component now sometimes use props to alias into a parents' uniforms.  Now happens at construction time of child scenes, including all scenes with camera controls.  If no uniforms are in props, a Component now generates its own.

render_animation no longer takes uniforms as a parameter, since it's local to the component.

Global refactor of shared_uniforms/uniforms_object/gpu_state to just uniforms.

Time is, optionally, not ticked for some Components depending on props, allowing outer components to manage ticking of the components beneath them.

advance_frame now works even for canvas-less Components (like the outer component of an Active Textbook page).

Removed no-longer-used function update_shared_state.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Graphics Example Code.
      index.html - The web page document containing the canvas (drawing surface).  It launches your JavaScript files. //-->
 <!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"/> <link rel="icon" href="assets/fav.ico">
-    <title>Displaying WebGL with tiny-graphics.js</title></head>
+    <title>WebGL</title></head>
 <body style="background: DarkGray">       <!-- Begin typing your web page here. //-->
 
       <!-- The following code embeds a WebGL canvas panel, loads certain scene(s), and displays panel(s) of their controls. //-->
