reformatted tiny-graphics.js and tiny-graphics-math.js and index.html and main-scene.js
moved long descriptive lecture-style comments into separate HTML documents

fixed a Vector4 omitted argument and omitted member function

Cleaned up Mat4.inverse(), need to test for typos

Need to update documentation wording and add aesthetic spaces back in math file

--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!-- Graphics Example Code.
-     index.html - The web page document containing the canvas (drawing surface).  It launches your JavaScript files. //-->
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"/> <link rel="icon" href="assets/fav.ico">
+index.html - The web page document containing the canvas (drawing surface).  It launches your JavaScript files. //-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" href="assets/fav.ico">
     <title>WebGL</title></head>
-<body style="background: DarkGray">       <!-- Begin typing your web page here. //-->
+<body style="background: DarkGray">
+<!-- Begin typing your web page's text here. //-->
 
-      <!-- The following code embeds a WebGL canvas panel, loads certain scene(s), and displays panel(s) of their controls. //-->
+<!-- The following code embeds a WebGL canvas panel powered by a tree of Components from tiny-graphics.  //-->
 <div id="main-section" class="document-builder"></div>
-<script type=module >      // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE *********************
-                           // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
-  const element_to_replace = document.querySelector( "#main-section" );
-  import { main_scene, additional_scenes } from './main-scene.js';  // Import the file that defines a scene.
-  const root = new main_scene();
-  root.animated_children.push( ...additional_scenes.map( scene => new scene() ) );    // This line creates your scene.
-  root.render_layout( element_to_replace );
+<script type=module>
+// ********************* THE ENTRY POINT OF YOUR JAVASCRIPT PROGRAM STARTS HERE *********************
+// Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
+const element_to_replace = document.querySelector ("#main-section");
+import {main_scene, additional_scenes} from './main-scene.js';
+const root = new main_scene ();                                                     // This line creates your scene.
+root.animated_children.push (...additional_scenes.map (scene => new scene ()));
+root.render_layout (element_to_replace);
 </script>
 
-</body></html>
+</body>
+</html>
