--- a/tiny-graphics-gui-doc.html
+++ b/tiny-graphics-gui-doc.html
@@ -7,6 +7,59 @@
 <body>
 class Controls_Widget
 
+**Controls_Widget** adds an array of panels to the document, one per loaded
+Scene object, each providing interactive elements such as buttons with key
+bindings, live readouts of Scene data members, etc.
+
+constructor( component, options = {} )
+
+class Keyboard_Manager
+
+**Keyboard_Manager** maintains a running list of which keys are depressed.  You can map combinations of
+shortcut keys to trigger callbacks you provide by calling add().  See add()'s arguments.  The shortcut
+list is indexed by strings, conveniently showing each bound shortcut combination.
+
+constructor( target = document, callback_behavior = ( callback, event ) => callback( event ) )
+
+The constructor  optionally takes "target", which is the desired DOM element for keys to be pressed
+inside of, and "callback_behavior", which will be called for every key action to allow extra behavior
+on each event -- giving an opportunity to customize their bubbling, preventDefault, and more.  It
+defaults to no additional behavior besides the callback itself on each assigned key action.
+
+add( shortcut_combination, callback = () => {}, keyup_callback = () => {} )
+
+add(): Creates a keyboard operation.  The argument shortcut_combination wants an
+array of strings that follow standard KeyboardEvent key names. Both the keyup
+and keydown callbacks for any key combo are optional.
+
+class Code_Manager
+
+**Code_Manager** breaks up a string containing code (any ES6 JavaScript).  The RegEx being used
+to parse is from https://github.com/lydell/js-tokens which states the following limitation:
+"If the end of a statement looks like a regex literal (even if it isn’t), it will be treated
+as one."  (This can miscolor lines of code containing divisions and comments).
+
+constructor( code )
+
+class Code_Widget
+
+**Code_Widget** draws a code navigator panel with inline links to the entire program source code.
+
+constructor( component, options = {} )
+
+display_code( code_in_focus )
+
+display_code():  Populate the code textbox. Pass undefined to choose index.html source.
+
+class Editor_Widget
+
+constructor( component, options = {} )
+
+select_class( class_definition )
+
+fetch_handler (url, body)
+
+A general utility function for sending / receiving JSON, with error handling.
 
 </body>
 </html>
